add frame for abv chart

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
 				<input type="text" placeholder='e.g., "HTML" or "HTML;CSS"' name="tags" size="30" autofocus required>
 				<input type="submit" value="Submit">
 			</form>
-			<h3>Put in the ABV you are looking for and see the beers that match!</h3>
+			<h3>Need something strong? Put in the ABV you are looking for and see the beers that match!</h3>
+			<div id="abvChart">
+			This will be an abv chart showing some data about what abv means.
+			</div>
 			<form class="inspiration-getter" onsubmit="return false;">
-				<input type="text" placeholder="e.g., jQuery" name="answerers" size="30"  required>
+				<input type="text" placeholder="e.g., 7 or 6.5, must be numeric" name="answerers" size="30"  required>
 				<input type="submit" value="Submit">
 			</form>
 		</div>
